--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ${PYTHON_PROJECTS_DIR}:/workspace
+      - ${PYTHON_WORKSPACE}:/workspace
   php5:
     build:
       context: ./php5
@@ -21,4 +21,4 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ${PHP_PROJECTS_DIR}:/workspace
+      - ${PHP_WORKSPACE}:/workspace
